force-app/main/default/objects/Order__c/fields/amount__c.field-meta.xml
<CustomField>
    <fullName>amount__c</fullName>
    <label>amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>