force-app/main/default/objects/Order__c/fields/billingCity__c.field-meta.xml
<CustomField>
    <fullName>billingCity__c</fullName>
    <label>billingCity</label>
    <type>TextArea</type>
</CustomField>