force-app/main/default/objects/Order__c/fields/billingCountry__c.field-meta.xml
<CustomField>
    <fullName>billingCountry__c</fullName>
    <label>billingCountry</label>
    <type>TextArea</type>
</CustomField>