force-app/main/default/objects/Order__c/fields/billingPhone__c.field-meta.xml
<CustomField>
    <fullName>billingPhone__c</fullName>
    <label>billingPhone</label>
    <type>TextArea</type>
</CustomField>