force-app/main/default/objects/Order__c/fields/billingState__c.field-meta.xml
<CustomField>
    <fullName>billingState__c</fullName>
    <label>billingState</label>
    <type>TextArea</type>
</CustomField>