force-app/main/default/objects/Order__c/fields/billingStreet1__c.field-meta.xml
<CustomField>
    <fullName>billingStreet1__c</fullName>
    <label>billingStreet1</label>
    <type>TextArea</type>
</CustomField>