force-app/main/default/objects/Order__c/fields/billingStreet2__c.field-meta.xml
<CustomField>
    <fullName>billingStreet2__c</fullName>
    <label>billingStreet2</label>
    <type>TextArea</type>
</CustomField>