force-app/main/default/objects/Order__c/fields/billingZip__c.field-meta.xml
<CustomField>
    <fullName>billingZip__c</fullName>
    <label>billingZip</label>
    <type>TextArea</type>
</CustomField>