force-app/main/default/objects/Order__c/fields/client__c.field-meta.xml
<CustomField>
    <fullName>client__c</fullName>
    <label>client</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>