force-app/main/default/objects/Order__c/fields/couponCode__c.field-meta.xml
<CustomField>
    <fullName>couponCode__c</fullName>
    <label>couponCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>