force-app/main/default/objects/Order__c/fields/discount__c.field-meta.xml
<CustomField>
    <fullName>discount__c</fullName>
    <label>discount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>