force-app/main/default/objects/Order__c/fields/emailReceipt__c.field-meta.xml
<CustomField>
    <fullName>emailReceipt__c</fullName>
    <label>emailReceipt</label>
    <type>TextArea</type>
</CustomField>