force-app/main/default/objects/Order__c/fields/expectedDelivery__c.field-meta.xml
<CustomField>
    <fullName>expectedDelivery__c</fullName>
    <label>expectedDelivery</label>
    <type>Date</type>
</CustomField>