force-app/main/default/objects/Order__c/fields/idOrder__c.field-meta.xml
<CustomField>
    <fullName>idOrder__c</fullName>
    <externalId>true</externalId>
    <label>idOrder</label>
    <length>250</length>
    <type>Text</type>
</CustomField>