force-app/main/default/objects/Order__c/fields/idUser__c.field-meta.xml
<CustomField>
    <fullName>idUser__c</fullName>
    <externalId>true</externalId>
    <label>idUser</label>
    <length>250</length>
    <type>Text</type>
</CustomField>