force-app/main/default/objects/Order__c/fields/paymentCard__c.field-meta.xml
<CustomField>
    <fullName>paymentCard__c</fullName>
    <label>paymentCard</label>
    <type>TextArea</type>
</CustomField>