force-app/main/default/objects/Order__c/fields/paymentConfirmation__c.field-meta.xml
<CustomField>
    <fullName>paymentConfirmation__c</fullName>
    <label>paymentConfirmation</label>
    <type>TextArea</type>
</CustomField>