force-app/main/default/objects/Order__c/fields/paymentType__c.field-meta.xml
<CustomField>
    <fullName>paymentType__c</fullName>
    <label>paymentType</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>