force-app/main/default/objects/Order__c/fields/posted__c.field-meta.xml
<CustomField>
    <fullName>posted__c</fullName>
    <label>postedTaxError</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>