force-app/main/default/objects/Order__c/fields/rebate__c.field-meta.xml
<CustomField>
    <fullName>rebate__c</fullName>
    <label>rebate</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>