force-app/main/default/objects/Order__c/fields/reprintCode__c.field-meta.xml
<CustomField>
    <fullName>reprintCode__c</fullName>
    <label>reprintCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>