force-app/main/default/objects/Order__c/fields/reprintText__c.field-meta.xml
<CustomField>
    <fullName>reprintText__c</fullName>
    <label>reprintText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>