force-app/main/default/objects/Order__c/fields/salesforceID__c.field-meta.xml
<CustomField>
    <fullName>salesforceID__c</fullName>
    <label>salesforceID</label>
    <type>TextArea</type>
</CustomField>