force-app/main/default/objects/Order__c/fields/schoolYear__c.field-meta.xml
<CustomField>
    <fullName>schoolYear__c</fullName>
    <label>schoolYear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>