force-app/main/default/objects/Order__c/fields/shipping__c.field-meta.xml
<CustomField>
    <fullName>shipping__c</fullName>
    <label>shipping</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>