force-app/main/default/objects/Order__c/fields/shippingCity__c.field-meta.xml
<CustomField>
    <fullName>shippingCity__c</fullName>
    <label>shippingCity</label>
    <type>TextArea</type>
</CustomField>