force-app/main/default/objects/Order__c/fields/shippingCountry__c.field-meta.xml
<CustomField>
    <fullName>shippingCountry__c</fullName>
    <label>shippingCountry</label>
    <type>TextArea</type>
</CustomField>