force-app/main/default/objects/Order__c/fields/shippingState__c.field-meta.xml
<CustomField>
    <fullName>shippingState__c</fullName>
    <label>shippingState</label>
    <type>TextArea</type>
</CustomField>