force-app/main/default/objects/Order__c/fields/shippingStreet1__c.field-meta.xml
<CustomField>
    <fullName>shippingStreet1__c</fullName>
    <label>shippingStreet1</label>
    <type>TextArea</type>
</CustomField>