force-app/main/default/objects/Order__c/fields/shippingStreet2__c.field-meta.xml
<CustomField>
    <fullName>shippingStreet2__c</fullName>
    <label>shippingStreet2</label>
    <type>TextArea</type>
</CustomField>