force-app/main/default/objects/Order__c/fields/shippingZip__c.field-meta.xml
<CustomField>
    <fullName>shippingZip__c</fullName>
    <label>shippingZip</label>
    <type>TextArea</type>
</CustomField>