force-app/main/default/objects/Order__c/fields/shipTo__c.field-meta.xml
<CustomField>
    <fullName>shipTo__c</fullName>
    <label>shipTo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>