force-app/main/default/objects/Order__c/fields/shipType__c.field-meta.xml
<CustomField>
    <fullName>shipType__c</fullName>
    <label>shipType</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>