force-app/main/default/objects/Order__c/fields/taxCounty__c.field-meta.xml
<CustomField>
    <fullName>taxCounty__c</fullName>
    <label>taxCounty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>