force-app/main/default/objects/Order__c/fields/taxState__c.field-meta.xml
<CustomField>
    <fullName>taxState__c</fullName>
    <label>taxState</label>
    <length>10</length>
    <type>Text</type>
</CustomField>