force-app/main/default/objects/Order__c/fields/totalBooks__c.field-meta.xml
<CustomField>
    <fullName>totalBooks__c</fullName>
    <label>totalBooks</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>