force-app/main/default/objects/Order__c/fields/transactionId__c.field-meta.xml
<CustomField>
    <fullName>transactionId__c</fullName>
    <label>transactionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>